# rr_ygo_7_client

./: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
refs/heads/main/: updater.json
scripts/: release.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cloudflare.rs  edopro.rs  lib.rs
src/components/: BackButton.tsx
src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
src/pages/boosters/: AdminActivation.tsx  BuyBooster.tsx  BuySealedDeck.tsx  CreateBooster.tsx  ListBooster.tsx
src/services/: api.ts  auth.ts  booster.ts  cards.ts  game.ts  rarity.ts
src/types/: Booster.ts  User.ts
src/utils/: booster.ts  cloudflare.ts  common.ts  edopro.ts  env.ts  replay.ts  store.ts  sync.ts
