[package]
name = "RRYGO7"
version = "0.2.1"
description = "Yugiohzinho"
authors = ["Ro7Rinke"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "wry"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
dotenvy = "0.15"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"] }
dirs-next = "2"
sysinfo = { version = "0.29.11", features = ["multithread", "serde"] }
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
walkdir = "2"

# platform-specific helpers
nix = { version = "0.26", optional = true }
windows-sys = { version = "0.48", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.48"
